--- a/Flask-Routing-Lab/templates/cart.html
+++ b/Flask-Routing-Lab/templates/cart.html
@@ -5,6 +5,11 @@
     <title>Cart</title>
 </head>
 <body>
-
+<button>
+    <a href = "/product"> press me to see product</a>
+</button>
+<button>
+    <a href = "/"> press me to see home</a>
+</button>
 </body>
 </html>
