--- a/Flask-Routing-Lab/templates/home.html
+++ b/Flask-Routing-Lab/templates/home.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" /> 
+
 </head>
 <body>
+<img src = "https://1000logos.net/wp-content/uploads/2018/10/Ebay-Logo-1999.jpg" id = "pic">
+<p>this is ebay</p>
+<img src = "https://i.pinimg.com/550x/72/2d/8b/722d8b8b41de82b1c7aee54acfe39456.jpg">
+<button>
+    <a href = "/product"> press me to see product</a>
+</button>
+<button>
+    <a href = "/cart"> press me to see cart</a>
+</button>
 
 </body>
 </html>
