--- a/Flask-Routing-Lab/templates/product.html
+++ b/Flask-Routing-Lab/templates/product.html
@@ -5,6 +5,13 @@
     <title>Product</title>
 </head>
 <body>
-
+<img src = "https://ih1.redbubble.net/image.4863865132.8219/icr,iphone_14_soft,back,a,x600-pad,600x600,f8f8f8.jpg">
+<button>
+    <a href = "/"> press me to see home</a>
+</button>
+<button>
+    <a href = "/cart"> press me to see cart</a>
+</button>
+<p> i pinky promise that i know how to add pics
 </body>
 </html>
